- basis.dom.wrapper.GroupingNode.insertBefore rewritten, dynamic tests in test/basis-dom_wrapers are pass now (but still problems with dataSource dynamic tests) - test/basis-dom_wrapers was extended, various bug fixes and additional checks

--- a/test/style/default/style.css
+++ b/test/style/default/style.css
@@ -129,7 +129,7 @@
   }
   .Test DIV.line .lineText
   {
-    white-space: nowrap;
+    white-space: pre;
     overflow: hidden;
     text-overflow: ellipsis;
   }
